--- a/style/styles.css
+++ b/style/styles.css
@@ -6,3 +6,65 @@ div {
     width: 100%;
     display: inline-block;
 }
+
+.tag-container{
+    width: auto;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    margin-bottom: 5px;
+    width: 70%;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+
+.tag-container .tag{
+    width: auto;
+    font-size: 50%;
+    padding: 5px 6px;
+    margin: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    background-color: #ddd;
+    transition: all 0.1s linear; 
+    color: #333;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 1px 1px #fff;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+
+.tag-container input {
+    padding: 5px;
+    font-size: 16px;
+    border: 0;
+    outline: none;
+    font-family: 'Rubik';
+    color: #333;
+    flex: 1;
+}
+
+.tag-container .tag:hover{
+    background-color: #3af;
+    color: white;
+}
+
+.tag-container .tag .close::after{
+    content: "\2716";
+    
+    transform: scale(0.8);
+    margin-left: 8px;
+}
+
+.tag-container .tag .close:hover:after{
+    color: red;
+}
+
+.tag-container .main-input {
+    border: 0;
+    outline: 0;
+    padding: 8px 1.6px;
+}
