--- a/style/styles.css
+++ b/style/styles.css
@@ -21,15 +21,15 @@ div {
 
 .tag-container .tag{
     width: auto;
-    font-size: 50%;
+    font-size: 70%;
     padding: 5px 6px;
     margin: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #ddd;
     border-radius: 3px;
-    background-color: #ddd;
+    background-color: #eee;
     transition: all 0.1s linear; 
     color: #333;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 1px 1px #fff;
+    /*box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 1px 1px #fff;*/
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -38,18 +38,19 @@ div {
 
 .tag-container input {
     padding: 5px;
-    font-size: 16px;
+    font-size: 14px;
     border: 0;
     outline: none;
-    font-family: 'Rubik';
+    font-family: 'Arial';
+    font-weight: bolder;
     color: #333;
     flex: 1;
     
 }
 
 .tag-container .tag:hover{
-    background-color: #3af;
-    color: white;
+    /*background-color: #3af;
+    color: white;*/
 }
 
 .tag-container .tag .close::after{
@@ -61,4 +62,17 @@ div {
 
 .tag-container .tag .close:hover:after{
     color: red;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #aaa;
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #aaa;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: #aaa;
 }
