--- a/style/styles.css
+++ b/style/styles.css
@@ -15,8 +15,7 @@ div {
     align-content: flex-start;
     margin-bottom: 5px;
     width: 70%;
-    overflow-x: auto;
-    overflow-y: auto;
+    position: relative;
 }
 
 .tag-container .tag{
@@ -49,13 +48,12 @@ div {
 }
 
 .tag-container .tag:hover{
-    /*background-color: #3af;
-    color: white;*/
+    background-color: rgba(92, 92, 92, 0.26);
+    
 }
 
 .tag-container .tag .close::after{
     content: "\2716";
-    
     transform: scale(0.8);
     margin-left: 8px;
 }
@@ -76,3 +74,36 @@ div {
 ::-ms-input-placeholder { /* Microsoft Edge */
     color: #aaa;
 }
+
+.autocomplete-items {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    /*position the autocomplete items to be the same width as the container:*/
+    top: 100%;
+    left: 0;
+    right: 0;
+  }
+  
+  .autocomplete-items div {
+    display: block;
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff; 
+    border: 1px solid #d4d4d4; 
+    font-family: Arial;
+    font-size: 14px;
+  }
+  
+  /*when hovering an item:*/
+  .autocomplete-items div:hover {
+    background-color: #e9e9e9; 
+  }
+  
+  /*when navigating through the items using the arrow keys:*/
+  .autocomplete-active {
+    background-color: DodgerBlue !important; 
+    color: #ffffff; 
+  }
