--- a/style/styles.css
+++ b/style/styles.css
@@ -13,6 +13,9 @@ div {
     width: 100%;
     height: 80px;
     background-color: lightgray;
+    background-image: url("/img/TopBar.PNG");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 #idioms {
