--- a/style/styles.css
+++ b/style/styles.css
@@ -12,10 +12,24 @@ div {
 #top_bar {
     width: 100%;
     height: 80px;
-    background-color: lightgray;
     background-image: url("/img/TopBar.PNG");
     background-repeat: no-repeat;
     background-size: 100% 100%;
+}
+
+#left_idioms {
+    display: block;
+}
+
+#bottom_idioms {
+    height: 500px;
+    width: 1200px;
+    background-image: url("/img/BottomIdioms.PNG");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    float: none;
+    position: absolute;
+    top: 580px;
 }
 
 #idioms {
