--- a/style/styles.css
+++ b/style/styles.css
@@ -19,8 +19,25 @@ div {
     color: white;
     text-align: center;
     margin-top: 0px;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     background-color: rgb(66, 66, 66);
+}
+
+#searchTitle{
+    font-size: 100%;
+    font-family: 'Arial';
+    font-weight: bolder;
+    text-decoration-line: underline;
+    color: white;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
+
+#rightColumn{
+    background-color: #525151d6;
+    height: 1025px;
+    width: 275px;
 }
 
 #top_bar {
@@ -47,7 +64,7 @@ div {
     float: none;
     position: absolute;
     top: 580px;
-    margin-left: 40px;
+    margin-left: 45px;
 }
 
 #idioms {
@@ -65,14 +82,15 @@ div {
 #dot_plot_container {
     width: 550px;
     height: 450px;
-    margin-left: 50px;
+    margin-left: 35px;
 }
 
 #barcharts {
-    width: 650px;
+    width: 400px;
     height: 1000px;
     float: right;
     margin-right: 35px;
+    margin-left: 35px;
 }
 
 #barchats_title, #small_multiples {
@@ -107,7 +125,9 @@ div {
 
 
 .tag-container input {
-    padding: 5px;
+    /*padding: 5px;*/
+    padding-bottom: 5px;
+    padding-top: 5px;
     font-size: 14px;
     border: 0;
     outline: none;
@@ -119,7 +139,7 @@ div {
 }
 
 .tag-container .tag:hover{
-    background-color: rgba(92, 92, 92, 0.26);
+    background-color: rgb(211, 211, 211);
     
 }
 
