Publishers done for word cloud, dot plot and small multiples

--- a/style/styles.css
+++ b/style/styles.css
@@ -36,7 +36,7 @@ div {
     margin-bottom: 5px;
 }
 
-#rightColumn {
+#leftColumn {
     background-color: #cececed6;
     height: 1025px;
     width: 265px;
